<resources>
    <string name="app_name">Android Training</string>
    <string name="name">Name</string>
    <string name="version">Version</string>
    <string name="sdk">SDK</string>
    <string name="description">Description</string>
    <string name="date">Release Date</string>
    <string name="confirm">Confirm</string>
    <string name="confirmed">You clicked Confirm</string>
    <string name="typeMessage">Type Your Text Here</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="enterText">  Enter your text here</string>
    <string name="btnCustom">Submit</string>
    <string name="x">x</string>
    <string name="bottomMessage">You have clicked Bottom Dialog Box</string>
    <string name="btnClose">Close</string>
    <string name="btnAdd">Add Data</string>
    <string name="floatingAdd">Add new</string>
    <string name="simple_dialog">Simple Dialog</string>
    <string name="dialog_with_button">Dialog with Button</string>
    <string name="single_choice">Single Choice</string>
    <string name="multi_choice">Multi Choice</string>
    <string name="circularProgress">Circular Progress</string>
    <string name="datePicker">Date Picker</string>
    <string name="timePicker">Time Picker</string>
    <string name="bottomDialog">Bottom Dialog</string>
    <string name="customDialog">Custom Dialog Box</string>


    <string name="simpleMessage">You CLicked Simple Dialog</string>
    <string name="dialog_buttonMessage">You CLicked Dialog with Button</string>
    <string name="singleMessage">Select Any One</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="delete">delete</string>
    <string name="widget">Widget</string>
    <string name="recycler_view">Recycler View</string>
    <string name="dialogs">Dialogs</string>
    <string name="life_cycle_activity">Life Cycle Activity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="user_name">User Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t Have an Account? </string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="update">Update Password</string>

    <string name="send_to_fragment_one">Finish</string>
    <string name="send_to_fragment_two">Send to Fragment Two</string>
    <string name="send_to_fragment_three">Send to Fragment Three</string>
    <string name="from_fragment_one">From Fragment One</string>
    <string name="from_fragment_two">From Fragment Two</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="search_places">Search Places</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="maps">Maps</string>
    <string name="media">Media</string>
    <string name="id">ID</string>
    <string name="title">Title</string>
    <string name="body">Body</string>

    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_orders">Orders</string>
    <string name="title_profile">Profile</string>
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="calls">Calls</string>
    <string name="chats_fragment_is_selected">Chats Fragment is selected</string>
    <string name="calls_fragment_is_selected">Calls Fragment is selected</string>
    <string name="status_fragment_is_selected">Status Fragment is selected</string>

    <string name="open_activity_for_result">Open Activity For Result</string>
    <string name="fragment_one">Fragment One</string>
    <string name="enter_something">Enter Something</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="replace">Replace</string>
    <string name="fragment_two">Fragment Two</string>
    <string name="finish">Finish</string>
    <string name="fragment">Fragment One</string>
    <string name="images">Images</string>
    <string name="posts">Posts</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="bottom_navigation">Bottom Navigation</string>
    <string name="dog_breed">Dog Breed</string>
    <string name="material_view">Material View</string>
    <string name="material_button_1">Material Button 1</string>
    <string name="material_button_2">Material Button 2</string>
    <string name="image_button">Image Button</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="chips">Chips</string>
    <string name="checkable">Checkable</string>
    <string name="stroke">Stroke</string>
    <string name="chip_icon">Chip Icon</string>
    <string name="close_icon">Close Icon</string>
    <string name="edit_text_layout">Edit Text Layout</string>
    <string name="type_here">Type here</string>
    <string name="check_box">Check Box</string>
    <string name="check_box_1">Check Box 1</string>
    <string name="check_box_2">Check Box 2</string>
    <string name="check_box_3">Check Box 3</string>
    <string name="radio_group_and_radio_button">Radio Group and Radio Button</string>
    <string name="radio_button_1">Radio Button 1</string>
    <string name="radio_button_2">Radio Button 2</string>
    <string name="switches">Switches</string>
    <string name="radio_button_3">Radio Button 3</string>
    <string name="seek_bar">Seek Bar</string>
    <string name="progress_bar">Progress Bar</string>
    <string name="spinner">Spinner</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_body">Notification Message</string>
    <string name="handle_notification_now" />

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="fcm_token" />
    <string name="notification">Notification</string>

</resources>