<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.WidgetActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:verticalScrollbarPosition="right"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:background="@color/Gold"
            android:text="@string/material_view"
            android:textSize="25sp"
            android:textColor="@color/Black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/my_button_oval"
            android:text="@string/material_button_1"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/my_button_border_red"
            android:text="@string/material_button_2"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/btn1"
            app:layout_constraintTop_toBottomOf="@+id/btn1"
            tools:ignore="TextContrastCheck" />
        <LinearLayout
            android:id="@+id/imgBtn"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@color/Gold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:id="@+id/img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/image_icon_icons8"
                app:layout_constraintStart_toStartOf="@+id/btn2"
                app:layout_constraintTop_toBottomOf="@+id/btn2"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/lblImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_button"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="@+id/btn2"
                app:layout_constraintTop_toBottomOf="@+id/btn2"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                />
        </LinearLayout>

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:text="@string/togglebutton"
            android:textOff="@string/off"
            android:textOn="@string/on"
            app:layout_constraintStart_toStartOf="@+id/img"
            app:layout_constraintTop_toBottomOf="@+id/img" />

        <TextView
            android:id="@+id/lblChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/chips"
            android:textColor="@color/Black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toggleButton" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/checkable"
                android:layout_marginStart="30dp"
                app:chipBackgroundColor="#F3C300"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:checkable="true"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:checkable="true"
                android:text="@string/stroke"
                app:layout_constraintLeft_toRightOf="@+id/chip1" />



        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip3"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/chip_icon"
                app:chipBackgroundColor="#F3C300"
                app:shapeAppearanceOverlay="@color/Yellow" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                style="@style/Widget.MaterialComponents.Chip.Entry"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:text="@string/close_icon"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:minHeight="48dp"
            android:text="@string/switches"
            app:layout_constraintTop_toBottomOf="@+id/chip4"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/lblEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/edit_text_layout"
            android:textColor="@color/BlueViolet"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toBottomOf="@+id/switch1"
            />


        <EditText
            android:id="@+id/txtEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:ems="30"
            android:hint="@string/type_here"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@+id/lblEditText"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/lblCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/check_box"
            android:textColor="@color/Black"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toBottomOf="@+id/txtEdit"
            />

        <CheckBox
            android:id="@+id/chkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/check_box_1"
            android:textColor="@color/Black"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toBottomOf="@+id/lblCheckBox"
            />

        <CheckBox
            android:id="@+id/chkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/check_box_2"
            android:textColor="@color/Black"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toBottomOf="@+id/chkBox1"
            />

        <CheckBox
            android:id="@+id/chkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/check_box_3"
            android:textColor="@color/Black"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toBottomOf="@+id/chkBox2"
            />

        <TextView
            android:id="@+id/lblRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/radio_group_and_radio_button"
            android:textColor="@color/Black"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toBottomOf="@+id/txtEdit"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/radio_button_1"
                android:textColor="@color/Black"
                android:layout_marginStart="30dp"
                app:layout_constraintTop_toBottomOf="@+id/lblRB"
                />

            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/radio_button_2"
                android:textColor="@color/Black"
                android:layout_marginStart="30dp"
                app:layout_constraintTop_toBottomOf="@+id/rb1"
                />

            <RadioButton
                android:id="@+id/rb3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/radio_button_3"
                android:textColor="@color/Black"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintTop_toBottomOf="@+id/rb2"
                />
        </RadioGroup>

        <TextView
            android:id="@+id/lblSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/seek_bar"
            android:textColor="@color/Black"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toBottomOf="@+id/rb3"
            />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/Black"
            app:layout_constraintTop_toBottomOf="@+id/lblSeekBar" />

        <TextView
            android:id="@+id/lblProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/progress_bar"
            android:textColor="@color/Black"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toBottomOf="@+id/seekBar"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/Black"
            android:progress="45"
            app:layout_constraintTop_toBottomOf="@+id/lblProgressBar" />

        <TextView
            android:id="@+id/lblSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/spinner"
            android:textColor="@color/Black"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownWidth="wrap_content"
            android:tooltipText="Spinner Item 1"
            android:visibility="visible"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintTop_toBottomOf="@+id/lblSpinner"
            tools:targetApi="o" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>
