<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_two"
        android:textSize="@dimen/t18"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/d10"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/d10"
        android:hint="@string/enter_something"
        android:inputType="text"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmitSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/send_to_fragment_one"
        />

</LinearLayout>